--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.0.0-beta.5",
     "grommet": "^2.17.0",
     "grommet-icons": "^4.5.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
