--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
     "react-redux": "^7.2.3",
