--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
-REACT_APP_DEV_API_URL = http://localhost:8080/api/
-REACT_APP_PROD_API_URL = https://ministry-planner-server.herokuapp.com/api/
+REACT_APP_DEV_API_URL=http://localhost:8080/api/
+REACT_APP_PROD_API_URL=https://ministry-planner-server.herokuapp.com/api/
+REACT_APP_AUTH0_DOMAIN=ministry-planner-auth.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=WJW7ebKhRA7Cgp1WC3rn3DvEaw5c9kfg
