--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.12.3",
