--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@auth0/auth0-react": "^1.8.0",
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
+    "@emailjs/browser": "^3.3.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
@@ -22,6 +23,7 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.0.0-beta.5",
+    "emailjs-com": "^3.2.0",
     "grommet": "^2.17.0",
     "grommet-icons": "^4.5.0",
     "moment": "^2.29.1",
